...
    var label: String {
        switch self {
        case .gram: "Grams"
        case .milliliter: "Milliliters"
        case .ounce: "Ounces"
        case .pound: "Pounds"
        case .cup: "Cups"
        case .tablespoon: "Tablespoons"
        case .teaspoon: "Teaspoons"
        case .each: "Each"
        case .serving: "Servings"
        }
    }
...
